tests/spec-examples/0050.wgsl.snap
error: Expected expression, found 'for'.

for (var i: i32 = 0; i < 4; i++) {
~~~
error: Expected statement, found 'for'.

for (var i: i32 = 0; i < 4; i++) {
~~~
